agents/platform/tests/constraints/harden-defaults/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-no-secctx-in-app
  namespace: app-test
spec:
  containers:
    - name: app
      image: docker.io/rancher/kubectl:v1.30.2
      resources:
        requests: {cpu: 50m, memory: 64Mi}
        limits: {cpu: 200m, memory: 100Mi}
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-no-secctx-in-tool
  namespace: tool-test
spec:
  containers:
    - name: app
      image: docker.io/rancher/kubectl:v1.30.2
      resources:
        requests: {cpu: 50m, memory: 64Mi}
        limits: {cpu: 200m, memory: 100Mi}
